# DataVisualizer

./: CMakeLists.txt
.CI/: check_format.sh
.github/workflows/: checks  checks.yml  package_compilation.yml
CI/: check_format.sh
header/: Data.hpp  Histogram_1D.hpp  MultiData.hpp
header/Algorithms/: DataHistogramMakerAlgorithm.hpp  DataPlotterAlgorithm.hpp  FilteringAlgorithm.hpp  MultiDataHistogramMakerAlgorithm.hpp  MultiDataPlotterAlgorithm.hpp  PlotComparisonAlgorithm.hpp  RootFileHistogramMakerAlgorithm.hpp  RootFileReaderAlgorithm.hpp  SeedingPerformanceRootReaderAlgorithm.hpp  TxtFileReaderAlgorithm.hpp
header/Algorithms/EfficiencyMakers/: RootFileEfficiencyMakerAlgorithm.hpp
header/Algorithms/Filters/: FilteringAlgorithm.hpp
header/Algorithms/GraphMakers/: MultiDataGraphMakerAlgorithm.hpp
header/Algorithms/HistogramMakers/: DataHistogramMakerAlgorithm.hpp  MultiDataHistogramMakerAlgorithm.hpp  RootFileHistogramMakerAlgorithm.hpp
header/Algorithms/Plotters/: ComparisonPlotterAlgorithm.hpp  Efficiency1DPlotterAlgorithm.hpp  Efficiency2DPlotterAlgorithm.hpp  EfficiencyComparisonPlotterAlgorithm.hpp  GraphComparisonPlotterAlgorithm.hpp  GraphPlotterAlgorithm.hpp  Histogram1DPlotterAlgorithm.hpp  Histogram2DPlotterAlgorithm.hpp  HistogramComparisonPlotterAlgorithm.hpp  PlotComparisonAlgorithm.hpp  PlotterAlgorithm.hpp  ProfileComparisonPlotterAlgorithm.hpp  ProfilePlotterAlgorithm.hpp
header/Algorithms/ProfileMakers/: RootFileProfileMakerAlgorithm.hpp
header/Algorithms/Readers/: RootFileReaderAlgorithm.hpp  SeedingPerformanceRootReaderAlgorithm.hpp  TxtFileReaderAlgorithm.hpp
header/Core/: BaseAlgorithm.hpp  EventContext.hpp  IHolder.hpp  Messager.hpp  Scheduler.hpp
header/EventDataModel/: Data.hpp  Efficiency.hpp  Graph.hpp  Histogram_1D.hpp  Histogram_2D.hpp  MultiData.hpp  Profile.hpp
macros/: ckf_performance.cxx  efficiency_vs_nparticles.cxx  maintmp.cxx  muon_efficiency_check.cpp  seed_finding_timing.cxx  testRootReader.cpp  timing_studies_EDM.cpp  tracking_performance.cxx
src/Algorithms/: #RootFileReaderAlgorithm.cpp#  DataHistogramMakerAlgorithm.cpp  DataPlotterAlgorithm.cpp  MultiDataPlotterAlgorithm.cpp  PlotterAlgorithm.cpp  RootFileHistogramMakerAlgorithm.cpp  RootFileReaderAlgorithm.cpp  SeedingPerformanceRootReaderAlgorithm.cpp
src/Algorithms/EfficiencyMakers/: RootFileEfficiencyMakerAlgorithm.cpp
src/Algorithms/GraphMakers/: MultiDataGraphMakerAlgorithm.cpp
src/Algorithms/HistogramMakers/: DataHistogramMakerAlgorithm.cpp  MultiDataHistogramMakerAlgorithm.cpp  RootFileHistogramMakerAlgorithm.cpp
src/Algorithms/Plotters/: Efficiency1DPlotterAlgorithm.cpp  Efficiency2DPlotterAlgorithm.cpp  EfficiencyComparisonPlotterAlgorithm.cpp  GraphComparisonPlotterAlgorithm.cpp  GraphPlotterAlgorithm.cpp  Histogram1DPlotterAlgorithm.cpp  Histogram2DPlotterAlgorithm.cpp  HistogramComparisonPlotterAlgorithm.cpp  PlotComparisonAlgorithm.cpp  PlotterAlgorithm.cpp  ProfileComparisonPlotterAlgorithm.cpp  ProfilePlotterAlgorithm.cpp
src/Algorithms/ProfileMakers/: RootFileProfileMakerAlgorithm.cpp
src/Algorithms/Readers/: RootFileReaderAlgorithm.cpp  SeedingPerformanceRootReaderAlgorithm.cpp
src/Core/: BaseAlgorithm.cpp  EventContext.cpp  Messager.cpp  Scheduler.cpp
src/EventDataModel/: Efficiency.cpp  Profile.cpp
